<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="24dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="com.nailnafir.jajanin.ui.auth.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo_empty"
            android:contentDescription="@string/photo" />

        <TextView
            style="@style/TextView.RubikNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/et_full_name"
            style="@style/EditText.RubikNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="name"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_full_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.RubikNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditText.RubikNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.RubikNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText.RubikNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="password"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_continue"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/next"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>